# concerto-validate-rs

./: .gitignore  Cargo.toml  README.md  model.json
.github/workflows/: ci.yml
concerto-cli/: Cargo.toml
concerto-cli/src/: main.rs
concerto-conformance/: Cargo.toml
concerto-conformance/fixtures/instances/: abstract_base_record.json  assignment_wrong_target.json  contact_bad_email.json  employee_valid.json  inspection_bad_map.json  parcel_bad_postal_code.json  person_bad_datetime.json  person_missing_required.json  person_unknown_property.json  person_valid.json  person_with_gender_bad_enum.json
concerto-conformance/fixtures/models/: abstract_model.json  contact_model.json  employee_model.json  map_model.json  person_model.json  person_with_gender_model.json  relationship_model.json  scalar_model.json  unrelated_model.json
concerto-conformance/fixtures/scenarios/: 01_valid_person.json  02_missing_required.json  03_unknown_property.json  04_child_as_parent.json  05_unrelated_requested_type.json  06_invalid_datetime.json  07_regex_constraint.json  08_invalid_enum.json  09_invalid_relationship.json  10_abstract_rejection.json  11_scalar_constraint.json  12_map_validation.json
concerto-conformance/src/: lib.rs
concerto-conformance/tests/: conformance_tests.rs  fixture_scenarios.rs
concerto-core/: Cargo.toml
concerto-core/benches/: validation_bench.rs
concerto-core/examples/: direct_api_complex.rs
concerto-core/src/: declaration.rs  error.rs  lib.rs  model_file.rs  model_manager.rs  property.rs
concerto-core/src/parser/: cto_parser.rs  json_loader.rs  mod.rs
concerto-core/src/validator/: instance_validator.rs  mod.rs  numeric_validator.rs  string_validator.rs  type_resolver.rs
concerto-core/tests/: entity_validation_tests.rs
concerto-ffi/: Cargo.toml
concerto-ffi/demo/: demo.py
concerto-ffi/include/: concerto.h
concerto-ffi/src/: lib.rs
concerto-wasm/: Cargo.toml
concerto-wasm/demo/: index.html
concerto-wasm/scripts/: node_smoke.mjs
concerto-wasm/src/: lib.rs
