[workspace]
members = [
    "concerto-core",
    "concerto-wasm",
    "concerto-ffi",
    "concerto-cli",
    "concerto-conformance",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
once_cell = "1.19"
log = "0.4"
