[package]
name = "concerto-conformance"
version = "0.1.0"
edition = "2021"
description = "Conformance checks for the Concerto validator POC"
license = "Apache-2.0"
repository = "https://github.com/accordproject/concerto-validate-rs"
keywords = ["concerto", "validation", "conformance", "accord-project"]
rust-version = "1.75"

[dependencies]
concerto-core = { path = "../concerto-core" }
serde = { workspace = true }
serde_json = { workspace = true }
