[package]
name = "concerto-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM wrapper for the Concerto validator POC"
license = "Apache-2.0"
repository = "https://github.com/accordproject/concerto-validate-rs"
keywords = ["concerto", "wasm", "validation", "accord-project"]
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concerto-core = { path = "../concerto-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
